Added new layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidApplicationTemplate</string>
+    <string name="some_text">Some Text</string>
 </resources>
